// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileNavLinks > matches the snapshot when both sections are expanded 1`] = `
<div
  class="flex flex-col gap-4"
>
  <a
    class="flex items-center justify-between font-medium py-2"
    href="/browse"
  >
    <span>
      Giveaways
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
  <div
    class="flex flex-col"
  >
    <button
      class="flex items-center justify-between font-medium py-2 text-left text-primary"
    >
      <span>
        Learn
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 transition-transform rotate-180"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      class="flex flex-col gap-3 pl-6 mt-2"
    >
      <a
        class="flex items-center justify-between py-2 text-sm text-primary font-medium"
        href="/learn/integrations"
      >
        <span>
          Integrations
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </a>
      <a
        class="flex items-center justify-between py-2 text-sm text-muted-foreground"
        href="/learn/templates"
      >
        <span>
          Templates
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    class="flex flex-col"
  >
    <button
      class="flex items-center justify-between font-medium py-2 text-left"
    >
      <span>
        Tools
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 transition-transform rotate-180"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      class="flex flex-col gap-3 pl-6 mt-2"
    >
      <a
        class="flex items-center justify-between py-2 text-sm text-muted-foreground"
        href="/pickers/x"
      >
        <span>
          X Picker
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </a>
    </div>
  </div>
  <a
    class="flex items-center justify-between font-medium py-2"
    href="/pricing"
  >
    <span>
      Pricing
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
  <a
    class="flex items-center justify-between font-medium py-2"
    href="/contact"
  >
    <span>
      Contact
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
</div>
`;

exports[`MobileNavLinks > matches the snapshot when collapsed 1`] = `
<div
  class="flex flex-col gap-4"
>
  <a
    class="flex items-center justify-between font-medium py-2"
    href="/browse"
  >
    <span>
      Giveaways
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
  <div
    class="flex flex-col"
  >
    <button
      class="flex items-center justify-between font-medium py-2 text-left"
    >
      <span>
        Learn
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 transition-transform"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex flex-col"
  >
    <button
      class="flex items-center justify-between font-medium py-2 text-left"
    >
      <span>
        Tools
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 transition-transform"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
  <a
    class="flex items-center justify-between font-medium py-2"
    href="/pricing"
  >
    <span>
      Pricing
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
  <a
    class="flex items-center justify-between font-medium py-2"
    href="/contact"
  >
    <span>
      Contact
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </a>
</div>
`;
